# daily-diary

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
config/: routines.json
docs/: schema.sql
scripts/: resync_strava_calories.py  sync_meal_totals.py
src/daily_diary/: __init__.py  cli.py
src/daily_diary/clients/: __init__.py  oura.py  strava.py  weather.py
src/daily_diary/models/: __init__.py  entry.py  health.py  integrations.py
src/daily_diary/services/: __init__.py  advisor.py  analysis.py  database.py  diary_parser.py  nutrition.py  prompting.py  routines.py  storage.py  transcription.py
src/daily_diary/utils/: __init__.py  config.py
src/daily_diary/web/: __init__.py  app.py
src/daily_diary/web/routes/: __init__.py  advisor.py  analysis.py  entries.py  meals.py  profile.py
src/daily_diary/web/templates/: base.html  help.html  home.html  sql.html
src/daily_diary/web/templates/advisor/: chat.html  history.html  view.html
src/daily_diary/web/templates/analysis/: correlations.html  dashboard.html
src/daily_diary/web/templates/entries/: form.html  list.html  view.html
src/daily_diary/web/templates/meals/: list.html
src/daily_diary/web/templates/profile/: view.html
tests/: __init__.py  test_models.py
