[project]
name = "daily-diary"
version = "0.1.0"
description = "Personal health diary with automated data integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "stravalib>=2.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "tinydb>=4.8.0",
    # Web UI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    # Analysis
    "duckdb>=1.0.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "plotly>=5.24.0",
    # Local transcription (free, no API needed)
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
diary = "daily_diary.cli:app"
diary-web = "daily_diary.web:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daily_diary"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
